# bondarenko_coa

./: README.md  openApi.yml  openapipromo.yml
authmanager/: CMakeLists.txt
authmanager/src/: AuthServiceImpl.cpp  AuthServiceImpl.h  main.cpp  utils.cpp  utils.h
gateway/: CMakeLists.txt
gateway/src/: AuthServiceProxyImpl.cpp  AuthServiceProxyImpl.h  ClickAndCommentService.cpp  ClickAndCommentService.h  KafkaProd.cpp  KafkaProd.h  KafkaProducer.cpp  KafkaProducer.h  PromoServiceProxyImpl.cpp  PromoServiceProxyImpl.h  StatService.cpp  StatService.h  main.cpp
gateway/tests/: CMakeLists.txt  KafkaConsumer.cpp  final.cpp  gatewaytest.cpp
promoservice/: CMakeLists.txt  PromoServiceImpl.cpp  PromoServiceImpl.h  db_helper.cpp  main.cpp
promoservice/tests/: CMakeLists.txt  test_promoservice.cpp
proto/: auth.proto  promo.proto  stat.proto
statservice/: CMakeLists.txt  StatServiceImpl.cpp  StatServiceImpl.h  StatServiceProxyImpl.cpp  main.cpp
